--- a/src/styles.css
+++ b/src/styles.css
@@ -108,4 +108,8 @@
         font-weight: bold;
         text-align: left;
     }
+
+    .table td a {
+        color: var(--bs-white);
+    }
 }
